--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -111,38 +111,42 @@
                 <div class="underline"></div>
             </div>
             <div class="container">
-                <!--First projects-->
+                <!--First project-->
                 <div class="row" id="project-1">
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
                         <div class="home-left">
-                            <!--span class to highlight projects descriptions title-->
                             <h2>
                                 Pr<span class="name-highlight">oje</span>ct descripti<span
                                     class="name-highlight2">on</span>
                             </h2>
                             <br />
-                            <!--Description-->
-                            <p class="intro-text">
-                                Well, nothing special just a glimpse from my offcial website
-                                though it is not completed yet 😄
+                            <!--about the project-->
+                            <p class="intro-text2">
+                                A four pages portfolio website sample using pure css. In this
+                                page, no JavaScript, frameworks are used, created using HTML and
+                                CSS.
                             </p>
-                            <!--website link-->
+                            <!--link to the page-->
                             <a id="home-btn" class="btn btn-general btn-portfolio mb-4"
-                                href="https://www.rezaulhreza.co.uk" title="visit" role="button">Visit Now</a>
+                                href="https://rezaulhreza.github.io/A1/index.html" title="visit" role="button">Visit
+                                Now</a>
                         </div>
                     </div>
-                    <!--first project description ends-->
-
-                    <!--first project starts-->
+                    <!--project image-->
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
-                        <div class="home-right">
-                            <img src="../assets/images/myweb.png" alt="website screenshot" class="img-fluid" />
+                        <div class="home-right intro-text2">
+                            <img src="../assets/images/portfolio.png" alt="CSS Portfolio website sample"
+                                class="img-fluid" />
                         </div>
                     </div>
                 </div>
+                <!--first project ends-->
 
+
+                <!--second project starts-->
                 <div class="row">
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
+                        <!--description starts-->
                         <div class="home-left">
                             <h2>
                                 Pr<span class="name-highlight2">oj</span>ect descriptio<span
@@ -160,30 +164,42 @@
                                 Now</a>
                         </div>
                     </div>
+                    <!--description ends-->
+
+                    <!--project image-->
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
                         <div class="home-right intro-text2">
                             <img src="../assets/images/404.png" alt="404 page" class="img-fluid" />
                         </div>
                     </div>
                 </div>
+                <!--2nd project ends-->
+
+                <!--3rd project starts-->
                 <div class="row" id="project-1">
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
+                        <!--project description starts-->
                         <div class="home-left">
                             <h2>
                                 Pr<span class="name-highlight">oje</span>ct descripti<span
                                     class="name-highlight2">on</span>
                             </h2>
                             <br />
+                            <!--texts-->
                             <p class="intro-text">
                                 A ToDo List app using JavaScript. In this app, the users enter
                                 the items that they want to make a list of. It stores the data
                                 in a local storage and also users can remove any items from the
                                 list if they wish to do so.
                             </p>
+                            <!--link of the project-->
                             <a id="home-btn" class="btn btn-general btn-portfolio mb-4"
                                 href="https://rezaulhreza.github.io/todolist/" title="visit" role="button">Visit Now</a>
                         </div>
                     </div>
+                    <!--description ends-->
+
+                    <!--project image -->
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
                         <div class="home-right">
                             <img src="../assets/images/todo.png" alt="todolist" class="img-fluid" />
@@ -191,56 +207,41 @@
                     </div>
                 </div>
 
+                <!--project ends -->
+
+                <!--4th project starts-->
                 <div class="row">
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
                         <div class="home-left">
+                            <!--description-->
                             <h2>
                                 Pr<span class="name-highlight2">oj</span>ect descriptio<span
                                     class="name-highlight">n</span>
                             </h2>
                             <br />
+                            <!--about the project-->
                             <p class="intro-text">
                                 Animated login form using JavaScript. HTML and CSS have been
                                 used as well. In the JavaScript, event listener has been
                                 applied. When the round button is clicked, the window expands
                                 and brings the login form.
                             </p>
+                            <!--link to the project-->
                             <a id="home-btn" class="btn btn-general btn-portfolio mb-4"
                                 href="https://codepen.io/rezaulhreza/full/mdJQGoN" title="visit" role="button">Visit
                                 Now</a>
                         </div>
                     </div>
+                    <!--description ends-->
+                    <!--project image-->
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
                         <div class="home-right intro-text">
                             <img src="../assets/images/loginform.png" alt="animated login form" class="img-fluid" />
                         </div>
                     </div>
                 </div>
-                <div class="row" id="project-1">
-                    <div class="col-md-6 d-flex justify-content-center align-items-center">
-                        <div class="home-left">
-                            <h2>
-                                Pr<span class="name-highlight">oje</span>ct descripti<span
-                                    class="name-highlight2">on</span>
-                            </h2>
-                            <br />
-                            <p class="intro-text2">
-                                A four pages portfolio website sample using pure css. In this
-                                page, no JavaScript, frameworks are used, created using HTML and
-                                CSS.
-                            </p>
-                            <a id="home-btn" class="btn btn-general btn-portfolio mb-4"
-                                href="https://rezaulhreza.github.io/A1/index.html" title="visit" role="button">Visit
-                                Now</a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 d-flex justify-content-center align-items-center">
-                        <div class="home-right intro-text2">
-                            <img src="../assets/images/portfolio.png" alt="CSS Portfolio website sample"
-                                class="img-fluid" />
-                        </div>
-                    </div>
-                </div>
+                <!--4th project ends-->
+
         </section>
         <!-- Projects section ends -->
 
