update on landing page and cv page

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="home-left">
 
                         <!--name-highlight class is to highlight the last name-->
-                        <h2 class="animate-text">Rezaul H <span class="name-highlight"> Reza </span> </h2>
+                        <h2 class="animate-text">This is <span class="name-highlight"> Reza </span> </h2>
                         <h4>The developer you are looking for</h4>
                         <!--link to the cv page for the visitor, recruiters to know more using font awesome icon-->
                         <button class="btn btn-lg button "> <a href="pages/cv.html">Know more</a> <i
