--- a/pages/cv.html
+++ b/pages/cv.html
@@ -124,7 +124,7 @@
                         <h4>Level-0</h4> <br>
                         <p>Science, IT And Engineering, <br>
                             University Of Northampton International College <br>
-                            Northampton
+                            Northampton,
                             United Kingdom.
                         </p>
                     </div>
@@ -160,8 +160,8 @@
                             <p>CSS3</p>
                             <p>JavaScript</p>
                             <p>JAVA</p>
-                            <p>Wireframing</p>
-                            <p>Python</p>
+                            <p>ORACLE SQL</p>
+                            <p>Python - Flask, Django</p>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -170,10 +170,10 @@
                             <h3>Graphics Design</h3>
                             <hr>
                             <p>Adobe Photoshop</p>
-                            <p>Adobe Illustrator</p>
+
                             <p>Adobe XD</p>
                             <p>Adobe Lightroom</p>
-                            <p>Adobe Premiere Pro</p>
+
                         </div>
 
                     </div>
@@ -187,6 +187,7 @@
                             <p>Outstanding Customer Service Skills</p>
                             <p>Problem Solving Skills</p>
                             <p>Critical Analysis And Thinking Skills</p>
+                            <p>A team player</p>
                         </div>
 
                     </div>
@@ -297,44 +298,64 @@
 
     <!-- CV Ends -->
 
-    <!-- Footer -->
+    <!-- Footer goes here -->
     <footer>
-        <section>
-            <div class="container-fluid">
-                <div class="row pt-4">
-                    <div class="col-md-6 d-flex justify-content-center align-items-center ">
-
-                        <div class="row " id="social-section">
-                            <div class="col-md-12">
-                                <p class="text-center">Get in touch!</p>
-                            </div>
-                            <div class="col-md-12">
-                                <ul class="social-list">
-                                    <li> <a href="#"> <i class="fab fa-codepen"></i> </a> </li>
-                                    <li> <a href="#"> <i class="fab fa-github"> </i> </a> </li>
-                                    <li> <a href="#"> <i class="fab fa-google-plus-g"> </i> </a> </li>
-                                    <li> <a href="#"> <i class="fab fa-twitter"></i> </a> </li>
-                                    <li> <a href="#"> <i class="fab fa-linkedin-in"></i> </a> </li>
-                                    <li> <a href="#"> <i class="fab fa-instagram"></i></a> </li>
-                                </ul>
-                            </div>
-
+        <div class="container-fluid">
+            <div class="row pt-4 pb-2">
+                <!--footer- left hand side-->
+                <div class="col-md-6 d-flex justify-content-center align-items-center">
+                    <!--links to all social network goes here-->
+                    <div class="row" id="social-section">
+                        <div class="col-md-12">
+                            <p class="text-center">Get in touch!</p>
+                        </div>
+                        <div class="col-md-12">
+                            <ul class="social-list">
+                                <!--codepen link-->
+                                <li>
+                                    <a href="https://www.codepen.io/rezaulhreza">
+                                        <i class="fab fa-codepen"></i>
+                                    </a>
+                                </li>
+                                <!---github link-->
+                                <li>
+                                    <a href="https://www.github.com/rezaulhreza">
+                                        <i class="fab fa-github"> </i>
+                                    </a>
+                                </li>
+                                <!--twitter profile-->
+                                <li>
+                                    <a href="https://www.twitter.com/rezaulhreza">
+                                        <i class="fab fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <!--LinkedIn profile-->
+                                <li>
+                                    <a href="https://www.linkedin.com/in/rezaul-hoque-reza-596b0b195/">
+                                        <i class="fab fa-linkedin-in"></i>
+                                    </a>
+                                </li>
+                                <!--instagram profile-->
+                                <li>
+                                    <a href="instagram.com/rezaulhreza">
+                                        <i class="fab fa-instagram"></i></a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="col-md-6 d-flex justify-content-center align-items-center">
-                        <div class="row pb-1" id="copy-right">
-                            <div class="col-md-12">
-                                <p class="text-center">All right reserved</p>
-                                <p class="text-center">Rezaul Hoque Reza &copy; 2020 </p>
-                            </div>
+                </div>
+                <!--footer right hand side-->
+                <div class="col-md-6 d-flex justify-content-center align-items-center">
+                    <div class="row" id="copy-right">
+                        <div class="col-md-12">
+                            <p class="text-center">All rights reserved</p>
+                            <p class="text-center">Rezaul Hoque Reza &copy; 2020</p>
                         </div>
                     </div>
                 </div>
             </div>
-
-        </section>
+        </div>
     </footer>
-
 
 
 
