--- a/pages/cv.html
+++ b/pages/cv.html
@@ -106,10 +106,11 @@
             <h2>Educ<span class="name-highlight">at</span>ion </h2>
             <div class="underline"></div>
         </div>
-
+        <!--card for education history-->
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
+                    <!--animation will be in text-->
                     <div class="animation edu-bg">
                         <h4>BSc Software Engineering(Current)</h4> <br>
                         <p>University Of Northampton <br>
@@ -120,6 +121,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
+                    <!--animation will be in text-->
                     <div class="animation edu-bg-middle">
                         <h4>Level-0</h4> <br>
                         <p>Science, IT And Engineering, <br>
@@ -130,6 +132,7 @@
                     </div>
                 </div>
                 <div class=" animation col-md-4">
+                    <!--animation will be in text-->
                     <div class=" edu-bg">
                         <h4>Diploma</h4> <br>
                         <p>Computer Science, <br>
@@ -142,7 +145,7 @@
     <!-- Education starts -->
 
 
-    <!-- Skills Stars -->
+    <!-- Skills Starts -->
     <section id="skills-bg">
         <div id="skills">
             <div class="heading">
