--- a/pages/cv.html
+++ b/pages/cv.html
@@ -206,15 +206,19 @@
     <!-- Interest Starts -->
     <section id="interest">
         <div class="heading">
+            <!--using name highlight 2 class to highlight the heading-->
             <h2>Inter<span class="name-highlight2">es</span>T</h2>
+            <!--for the underline for heading-->
             <div class="underline"></div>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
+                    <!--progress bar name -->
                     <div class="Skill-bar-outer">
                         <h5>Graphics Design</h5>
                         <div class="progress">
+                            <!--for the progress bar -->
                             <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90"
                                 aria-valuemin="0" aria-valuemax="100">
                                 90%
@@ -223,9 +227,11 @@
                     </div>
                 </div>
                 <div class="col-md-6">
+                    <!--progress bar name-->
                     <div class="Skill-bar-outer">
                         <h5>Photography</h5>
                         <div class="progress">
+                            <!--progress bar-->
                             <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70"
                                 aria-valuemin="0" aria-valuemax="100">
                                 70%
@@ -234,9 +240,11 @@
                     </div>
                 </div>
                 <div class="col-md-6">
+                    <!--progress bar name-->
                     <div class="Skill-bar-outer">
                         <h5>Python</h5>
                         <div class="progress">
+                            <!--progress bar-->
                             <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85"
                                 aria-valuemin="0" aria-valuemax="100">
                                 85%
@@ -245,9 +253,11 @@
                     </div>
                 </div>
                 <div class="col-md-6">
+                    <!--progress bar name-->
                     <div class="Skill-bar-outer">
                         <h5>Machine Learning</h5>
                         <div class="progress">
+                            <!--progress bar-->
                             <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60"
                                 aria-valuemin="0" aria-valuemax="100">
                                 60%
