--- a/pages/cv.html
+++ b/pages/cv.html
@@ -274,12 +274,15 @@
     <!-- Reference starts -->
     <section id="reference">
         <div class="heading">
+            <!--using the name highlight class to highlight the heading-->
             <h2>Refe<span class="name-highlight2">ren</span>ce</h2>
+            <!--to underline the heading-->
             <div class="underline"></div>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
+                    <!--refernece card inner items-->
                     <div class="reference_inner">
                         <h3>Mohibul Shoeb</h3>
                         <br>
@@ -292,6 +295,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
+                    <!--reference card inner item-->
                     <div class="reference_inner">
                         <h3>Liz Coulter-smith</h3>
                         <br>
@@ -306,7 +310,7 @@
         </div>
 
     </section>
-    <!-- Reference starts -->
+    <!-- Reference ends -->
 
 
     <!-- CV Ends -->
