--- a/pages/contact.html
+++ b/pages/contact.html
@@ -258,7 +258,10 @@
                                 <li> <a href="https://www.linkedin.com/in/rezaul-hoque-reza-596b0b195/"> <i
                                             class="fab fa-linkedin-in"></i> </a> </li>
                                 <!--instagram profile-->
-                                <li> <a href="instagram.com/rezaulhreza"> <i class="fab fa-instagram"></i></a> </li>
+                                <li>
+                                    <a href="https://www.instagram.com/rezaulhreza">
+                                        <i class="fab fa-instagram"></i></a>
+                                </li>
                             </ul>
                         </div>
 
