--- a/pages/cv.html
+++ b/pages/cv.html
@@ -354,7 +354,7 @@
                                 </li>
                                 <!--instagram profile-->
                                 <li>
-                                    <a href="instagram.com/rezaulhreza">
+                                    <a href="https://www.instagram.com/rezaulhreza">
                                         <i class="fab fa-instagram"></i></a>
                                 </li>
                             </ul>
