--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -122,21 +122,20 @@
                             <br />
                             <!--about the project-->
                             <p class="intro-text2">
-                                A four pages portfolio website sample using pure css. In this
-                                page, no JavaScript, frameworks are used, created using HTML and
-                                CSS.
+                                An weather app created using JavaScript mostly, along with HTML and CSS. It provides
+                                weather information using browser's geolocation. Also, it will display the weather
+                                description as well.
                             </p>
                             <!--link to the page-->
                             <a id="home-btn" class="btn btn-general btn-portfolio mb-4"
-                                href="https://rezaulhreza.github.io/A1/index.html" title="visit" role="button">Visit
+                                href="https://rezaulhreza.github.io/weather-app/" title="visit" role="button">Visit
                                 Now</a>
                         </div>
                     </div>
                     <!--project image-->
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
                         <div class="home-right intro-text2">
-                            <img src="../assets/images/portfolio.png" alt="CSS Portfolio website sample"
-                                class="img-fluid" />
+                            <img src="../assets/images/weather.png" alt="Weather app" class="img-fluid" />
                         </div>
                     </div>
                 </div>
@@ -221,14 +220,14 @@
                             <br />
                             <!--about the project-->
                             <p class="intro-text">
-                                Animated login form using JavaScript. HTML and CSS have been
-                                used as well. In the JavaScript, event listener has been
-                                applied. When the round button is clicked, the window expands
-                                and brings the login form.
+                                An interactive random quote generator apps using javascript mainly along with css and
+                                html. It loads a new quote every time the page is reloaded. In addition, it gets a new
+                                background image every time the page is loaded. Also, there is an option to tweet the
+                                quotes on twitter by clicking on the twitter button.
                             </p>
                             <!--link to the project-->
                             <a id="home-btn" class="btn btn-general btn-portfolio mb-4"
-                                href="https://codepen.io/rezaulhreza/full/mdJQGoN" title="visit" role="button">Visit
+                                href="https://rezaulhreza.github.io/random-quote/" title="visit" role="button">Visit
                                 Now</a>
                         </div>
                     </div>
@@ -236,7 +235,7 @@
                     <!--project image-->
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
                         <div class="home-right intro-text">
-                            <img src="../assets/images/loginform.png" alt="animated login form" class="img-fluid" />
+                            <img src="../assets/images/random quote.png" alt="animated login form" class="img-fluid" />
                         </div>
                     </div>
                 </div>
@@ -255,24 +254,27 @@
             <div class="container">
                 <div class="row mb-2">
                     <div class="col-md-4">
-                        <img class="img-fluid" src="../assets/images/birds.jpg" alt="" />
+                        <img class="img-fluid" src="../assets/images/tulip.jpg" alt="birds by rezaul h reza" />
                     </div>
                     <div class="col-md-4">
-                        <img class="img-fluid" src="../assets/images/cam.jpg" alt="" />
+                        <img class="img-fluid" src="../assets/images/butterfly.jpg"
+                            alt="butterfly on a flower by Rezaul H Reza" />
                     </div>
                     <div class="col-md-4">
-                        <img class="img-fluid" src="../assets/images/image1.png" alt="" />
+                        <img class="img-fluid" src="../assets/images/colorful sunset.jpg"
+                            alt="colorful sunset by Reza" />
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <img class="img-fluid" src="../assets/images/cam.jpg" alt="" />
+                        <img class="img-fluid" src="../assets/images/sunset duck.jpg"
+                            alt="sunset and a duck byv Rezaul H Reza" />
                     </div>
                     <div class="col-md-4">
-                        <img class="img-fluid" src="../assets/images/image1.png" alt="" />
+                        <img class="img-fluid" src="../assets/images/new moon.jpg" alt="new moon by Rezaul H Reza" />
                     </div>
                     <div class="col-md-4">
-                        <img class="img-fluid" src="../assets/images/birds.jpg" alt="" />
+                        <img class="img-fluid" src="../assets/images/wasdale.jpg" alt="" />
                     </div>
                 </div>
             </div>
@@ -320,7 +322,7 @@
                                     </li>
                                     <!--instagram profile-->
                                     <li>
-                                        <a href="instagram.com/rezaulhreza">
+                                        <a href="https://www.instagram.com/rezaulhreza">
                                             <i class="fab fa-instagram"></i></a>
                                     </li>
                                 </ul>
