--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -254,7 +254,7 @@
             <div class="container">
                 <div class="row mb-2">
                     <div class="col-md-4">
-                        <img class="img-fluid" src="../assets/images/tulip.jpg" alt="birds by rezaul h reza" />
+                        <img class="img-fluid" src="../assets/images" alt="birds by rezaul h reza" />
                     </div>
                     <div class="col-md-4">
                         <img class="img-fluid" src="../assets/images/butterfly.jpg"
@@ -356,4 +356,3 @@
         <!--js for portfolio -->
         <script src="../assets/JS/main2.js"></script>
     </body>
-</p>
