--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
                         <h2 class="animate-text">This is <span class="name-highlight"> Reza </span> </h2>
                         <h4>The developer you are looking for</h4>
                         <!--link to the cv page for the visitor, recruiters to know more using font awesome icon-->
-                        <button class="btn btn-lg button "> <a href="pages/cv.html">Know more</a> <i
-                                class="fas fa-arrow-right"></i>
-                        </button>
+                        <a href="pages/cv.html"><button class="btn btn-lg button ">Know More<i
+                                    class="fas fa-arrow-right"></i>
+                            </button>
+                        </a>
                     </div>
                 </div>
                 <!--landing page image. image is on the right hand side.-->
