--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <h2 class="animate-text">This is <span class="name-highlight"> Reza </span> </h2>
                         <h4>The developer you are looking for</h4>
                         <!--link to the cv page for the visitor, recruiters to know more using font awesome icon-->
-                        <a href="pages/cv.html"><button class="btn btn-lg button ">Know More<i
+                        <a href="https://rezaulhreza.github.io/sample/"><button class="btn btn-lg button ">Know More<i
                                     class="fas fa-arrow-right"></i>
                             </button>
                         </a>
