--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <p lang="en">
 
     <head>
@@ -356,5 +357,6 @@
         <!--js for portfolio -->
         <script src="../assets/JS/main2.js"></script>
     </body>
+</p>
 
-    </html>
+</html>
